# openapi-forge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml  flake.nix  install.sh  rust-toolchain.toml
.github/: RELEASE_CHECKLIST.md  dependabot.yml
.github/actions/publish-crate/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  fuzz.yml  release.yml  update-action-tag.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs  oci.rs
crates/forge-cli/tests/: e2e.rs
crates/forge-host/: Cargo.toml
crates/forge-host/src/: filesystem.rs  lib.rs  runtime.rs
crates/forge-ir/: Cargo.toml
crates/forge-ir-bindgen/: Cargo.toml
crates/forge-ir-bindgen/src/: bindings.rs  convert.rs  lib.rs
crates/forge-ir-bindgen/tests/: fuzz_regressions.rs
crates/forge-ir/src/: diagnostic.rs  lib.rs  operation.rs  proptest_util.rs  security.rs  types.rs  value.rs
crates/forge-parser/: Cargo.toml
crates/forge-parser/src/: ctx.rs  diag.rs  external.rs  finalize.rs  lib.rs  normalize.rs  operations.rs  pointer.rs  ref_walk.rs  refs.rs  sanitize.rs  schema.rs  security.rs  value.rs
crates/forge-parser/tests/: conformance.rs  fuzz_regressions.rs
crates/forge-parser/tests/fuzz_regressions/: short-json-utf8-boundary.json
crates/forge-pipeline/: Cargo.toml
crates/forge-pipeline/src/: driver.rs  lib.rs
crates/forge-plugin-itests/: Cargo.toml
crates/forge-plugin-itests/src/: lib.rs
crates/forge-plugin-itests/tests/: generator_debug_dump.rs  generator_go_server.rs  generator_rust_reqwest.rs  generator_typescript_cli.rs  generator_typescript_fetch.rs  pipeline_halt.rs  real_world.rs  rejection.rs  transformer_noop.rs  validator_required_operation_id.rs
crates/forge-plugin-itests/tests/common/: mod.rs
crates/forge-plugin-sdk/: Cargo.toml  README.md
crates/forge-plugin-sdk/src/: convert_impl.rs  lib.rs  output.rs  types_ext.rs  values_ext.rs
crates/forge-test-harness/: Cargo.toml  README.md
crates/forge-test-harness/src/: lib.rs
docs/: architecture.md  fuzzing.md  ir-spec.md  parser-coverage.md  plugin-authoring.md
docs/adr/: 0001-wasm-only-plugins.md  0002-two-pass-normalization.md  0003-no-wall-clock-in-plugins.md  0004-no-native-shim-in-sdk.md  0005-separate-plugin-workspace.md  0006-string-ids-and-type-map.md  0007-structured-extensions-not-json-strings.md  0008-no-outside-input-to-plugins.md  0009-no-static-feature-compatibility.md  0010-oci-plugin-distribution.md
fixtures/conformance/additional-properties-typed/: expected-ir.json  spec.json
fixtures/conformance/allof-conflict/: expected-diagnostics.json  expected-ir.json  spec.json
fixtures/conformance/allof-flatten/: expected-ir.json  spec.json
fixtures/conformance/allof-with-ref/: expected-ir.json  spec.json
fixtures/conformance/anyof/: expected-ir.json  spec.json
fixtures/conformance/array-of-nullable/: expected-ir.json  spec.json
fixtures/conformance/body-form-urlencoded/: expected-ir.json  spec.json
fixtures/conformance/body-multipart/: expected-ir.json  spec.json
fixtures/conformance/body-octet-stream/: expected-ir.json  spec.json
fixtures/conformance/body-text-plain/: expected-ir.json  spec.json
fixtures/conformance/callbacks/: expected-ir.json  spec.json
fixtures/conformance/components-mediatypes-3-2/: expected-diagnostics.json  expected-ir.json  spec.json
fixtures/conformance/components-pathitems-shared/: expected-diagnostics.json  expected-ir.json  spec.json
fixtures/conformance/compound-extension/: expected-ir.json  spec.json
fixtures/conformance/constraints/: expected-ir.json  spec.json
fixtures/conformance/content-encoding-keywords/: expected-ir.json  spec.json
fixtures/conformance/default-compound/: expected-ir.json  spec.json
fixtures/conformance/error-openapi-2/: expected-diagnostics.json  spec.json
fixtures/conformance/example-data-serialized-3-2/: expected-ir.json  spec.json
fixtures/conformance/examples/: expected-ir.json  spec.json
fixtures/conformance/extensions-universal/: expected-ir.json  spec.json
fixtures/conformance/external-docs/: expected-ir.json  spec.json
fixtures/conformance/external-docs-no-url/: expected-diagnostics.json  expected-ir.json  spec.json
fixtures/conformance/external-ref-cycle/: b.json  expected-diagnostics.json  (+2 more)
fixtures/real-world/: README.md
fuzz/: Cargo.toml  seed-corpus.sh
fuzz/fuzz_targets/: parse_str_bytes.rs  parse_str_structured.rs  transformer_output_ir.rs
plugins/: Cargo.toml
plugins/generator-debug-dump/: Cargo.toml
plugins/generator-debug-dump/src/: lib.rs
plugins/generator-go-server/: .gitignore  README.md  build.sh  go.mod  main.go
plugins/generator-go-server/emit/: gomod.go  naming.go  server.go  types.go
plugins/generator-go-server/wit-source/: world.wit
plugins/generator-rust-reqwest/: Cargo.toml  schema.json
plugins/generator-rust-reqwest/src/: bodies.rs  emit.rs  lib.rs  naming.rs  operations.rs  params.rs  types.rs  util.rs
plugins/generator-rust-reqwest/templates/: error.rs.in  lib.rs.in
plugins/generator-typescript-cli/: .gitignore  README.md  build.sh  package-lock.json  package.json  tsconfig.json
plugins/generator-typescript-cli/src/: component.ts  config.ts  naming.ts  throw.ts  types.ts
plugins/generator-typescript-cli/src/emit/: auth.ts  cli.ts  client.ts  index.ts  models.ts  package.ts  readme.ts  static_files.ts
plugins/generator-typescript-fetch/: Cargo.toml  schema.json
plugins/generator-typescript-fetch/src/: emit.rs  lib.rs  naming.rs  operations.rs  runtime.rs  types.rs
plugins/test-fixtures/generator-strict/: Cargo.toml
plugins/test-fixtures/generator-strict/src/: lib.rs
plugins/test-fixtures/generator-warn/: Cargo.toml
plugins/test-fixtures/generator-warn/src/: lib.rs
plugins/transformer-noop/: Cargo.toml
plugins/transformer-noop/src/: lib.rs
plugins/validator-required-operation-id/: Cargo.toml
plugins/validator-required-operation-id/src/: lib.rs
wit/: generator.wit  host.wit  ir.wit  package.wit  stage.wit  transformer.wit
xtask/: Cargo.toml
xtask/src/: main.rs
(+208 files in other folders)
