[package]
name = "forge-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI 3.0 JSON parser producing forge-ir"

[lints]
workspace = true

[dependencies]
forge-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
jsonptr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
