[package]
name = "forge-test-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test harness for OpenAPI Forge plugin authors"
readme = "README.md"
keywords = ["openapi", "codegen", "wasm", "plugin", "testing"]
categories = ["development-tools::testing", "wasm"]

[lints]
workspace = true

[dependencies]
forge-ir = { workspace = true }
forge-host = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
