[package]
name = "generator-rust-reqwest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenAPI Forge generator that emits an async reqwest-based Rust client crate."

[lib]
crate-type = ["cdylib"]

[dependencies]
forge-plugin-sdk = { workspace = true, features = ["generator"] }
serde = { version = "1.0", features = ["derive"] }
