[package]
name = "generator-typescript-fetch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenAPI Forge generator that emits a fetch-based TypeScript client."

[lib]
crate-type = ["cdylib"]

[dependencies]
forge-plugin-sdk = { workspace = true, features = ["generator"] }
serde = { version = "1.0", features = ["derive"] }
