[package]
name = "validator-required-operation-id"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Validator that asserts every operation declared an explicit `operationId`."

[lib]
crate-type = ["cdylib"]

[dependencies]
forge-plugin-sdk = { workspace = true, features = ["transformer"] }
