[package]
name = "generator-warn-fixture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Test fixture: accepts multipart but emits a Severity::Warning diagnostic. Not a production plugin."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
forge-plugin-sdk = { workspace = true, features = ["generator"] }
